[tool.poetry]
name = "uipa"
version = "0.1.0"
description = "Uipa.org django container pyproject"
authors = ["Suchandra Thapa <suchandra@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "~=4.2"
bleach = "^6.1.0"
celery = ">=5.2.2"
channels = "^4.0.0"
coreapi = "^2.3.3"
dj-database-url = "^2.1.0"
django-celery-beat = "^2.6.0"
django-celery-email = "^3.0.0"
django-configurations = "^2.5"
django-contrib-comments = "^2.2.0"
django-crossdomainmedia = ">=0.0.4"
django-elasticsearch-dsl = ">=8.0,<9.0"
django-filter = "^23.5"
django-floppyforms = "~1.9.0"
django-fsm = "^2.8.1"
django-json-widget = "^1.1.1"
django-leaflet = "^0.29.0"
django-mfa3 = "^0.11.0"
django-oauth-toolkit = "<2.0.0"
django-parler = "^2.3"
django-storages = "^1.14.2"
django-taggit = ">=2"
django-treebeard = "^4.7.1"
djangorestframework = "^3.14.0"
djangorestframework-csv = "^3.0.2"
djangorestframework-jsonp = "^1.0.2"
drf-spectacular = {extras = ["sidecar"], version = "^0.27.1"}
easy-thumbnails = "^2.8.5"
elasticsearch-dsl = ">=8.0.0,<9.0.0"
elasticsearch = ">=8.0.0,<9.0.0"
froide = {git = "https://github.com/codewithaloha/froide.git", rev = "container_fixes"}
geoip2 = "^4.8.0"
icalendar = "^5.0.11"
lxml = ">=4.6.5"
markdown = "^3.5.2"
phonenumbers = "^8.13.31"
pillow = ">=9.0.0"
psycopg = {version = ">=3.1.8", extras = ["binary"]}
pyisemail = "^2.0.1"
pypdf = ">=3"
python-magic = "^0.4.27"
python-mimeparse = "^1.6.0"
python-slugify = "^8.0.4"
reportlab = "^4.1.0"
requests = "^2.31.0"
wand = "^0.6.13"
weasyprint = "^61.1"
websockets = "^12.0"
pikepdf = "7.0.0"
django-filingcabinet = {git = "https://github.com/okfde/django-filingcabinet.git", rev = "main"}
pygtail = {git = "https://github.com/okfde/pygtail.git", rev = "3be17b00f55781caba62d589bcf8aceb0805a58c"}

[tool.poetry.group.test.dependencies]
beautifulsoup4 = "^4.12.3"
black = "^24.2.0"
coverage = "^7.4.3"
django-coverage-plugin = "^3.1.0"
django-stubs = "^4.2.7"
factory-boy = "^3.3.0"
faker = "^23.3.0"
flake8 = "^7.0.0"
flake8-bugbear = "^24.2.6"
isort = "^5.13.2"
monkeytype = "^23.3.0"
mypy = "^1.8.0"
pbr = "^6.0.0"
pre-commit = "^3.6.2"
pycodestyle = "^2.11.1"
pyflakes = "^3.2.0"
pytest-django = "^4.8.0"
pytest-factoryboy = "^2.6.0"
tblib = "^3.0.0"
text-unidecode = "^1.3"
time-machine = "^2.13.0"
types-markdown = "^3.5.0.20240129"
types-python-dateutil = "^2.8.19.20240106"
types-requests = "^2.31.0.20240218"
django-configurations = "^2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
