[project]
name = "uipa-org"
version = "0.1.1"
description = "Uipa.org django container dependencies"
authors = ["Suchandra Thapa <suchandra@gmail.com>"]
readme = "README.md"
requires-python = "== 3.13.*"
dependencies = [
    "django~=4.2",
    "bleach == 6.1.*",
    "celery >= 5.2.2",
    "channels == 4.0.*",
    "coreapi == 2.3.*",
    "dj-database-url == 2.1.*",
    "django-celery-beat == 2.6.*",
    "django-celery-email == 3.0.*",
    "django-configurations == 2.5.*",
    "django-contrib-comments == 2.2.*",
    "django-crossdomainmedia >= 0.0.4",
    "django-elasticsearch-dsl >=8.0,<9.0",
    "django-filter == 23.5.*",
    "django-floppyforms == 1.9.*",
    "django-fsm == 2.8.*",
    "django-json-widget == 1.1.*",
    "django-leaflet == 0.29.*",
    "django-mfa3 == 0.11.*",
    "django-oauth-toolkit == 2.4.0",
    "django-parler == 2.3.*",
    "django-storages == 1.14.*",
    "django-taggit>=2",
    "django-treebeard == 4.7.*",
    "djangorestframework == 3.14.*",
    "djangorestframework-csv == 3.0.*",
    "djangorestframework-jsonp == 1.0.*",
    "drf-spectacular[sidecar] == 0.27.*",
    "easy-thumbnails == 2.9.*",
    "elasticsearch-dsl >=8.0.0,<9.0.0",
    "elasticsearch >=8.0.0,<9.0.0",
    "froide",
    "geoip2 == 4.8.*",
    "icalendar == 5.0.*",
    "lxml >=4.6.5",
    "markdown == 3.5.*",
    "phonenumbers == 8.13.*",
    "pillow>=9.0.0",
    "psycopg[binary] >= 3.1.8",
    "pyisemail == 2.0.*",
    "pypdf >=3",
    "python-magic == 0.4.*",
    "python-mimeparse == 1.6.*",
    "python-slugify == 8.0.*",
    "reportlab == 4.1.*",
    "requests == 2.31.*",
    "wand == 0.6.*",
    "weasyprint == 61.1.*",
    "websockets == 12.0.*",
    "pikepdf == 9.0.0",
    "django-filingcabinet @ git+https://github.com/okfde/django-filingcabinet.git@main",
    "pygtail"
]

[tool.uv.sources]
#django-filingcabinet = { git = "https://github.com/okfde/django-filingcabinet", branch="main"}
pygtail = { git = "https://github.com/okfde/pygtail", rev = "dac8bc6fc8d65c7ac820806e570242919616e946" }
froide = { git = "https://github.com/codewithaloha/froide2"}

[dependency-groups]
dev = ["beautifulsoup4 == 4.12.*",
    "black == 24.*",
    "coverage == 7.*",
    "django-coverage-plugin == 3.*",
    "django-stubs == 4.2.*",
    "factory-boy == 3.*",
    "faker == 23.*",
    "flake8 == 7.*",
    "flake8-bugbear == 24.*",
    "isort == 5.*",
    "monkeytype == 23.*",
    "mypy == 1.*",
    "pbr == 6.*",
    "pre-commit == 3.*",
    "pycodestyle == 2.*",
    "pyflakes == 3.2.*",
    "pytest-django == 4.8.*",
    "pytest-factoryboy == 2.6.*",
    "tblib == 3.*",
    "text-unidecode == 1.3.*",
    "time-machine == 2.13.*",
    "types-markdown == 3.5.*",
    "types-python-dateutil == 2.8.*",
    "types-requests == 2.31.*",
    "django-configurations == 2.5.*",
]
